--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Fix Jest permissions
+        run: chmod +x ./node_modules/.bin/jest
+
       - name: Run tests
-        run: npm run test
+        run: npx jest
 
       - name: Build application
         run: npm run build
@@ -35,6 +38,7 @@ jobs:
         with:
           name: dist
           path: dist/
+
 
   deploy:
     needs: build-and-test
